Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#7905 closed bug (fixed)

posix/stdio.h open_memstream seems to be wrong

Reported by: scottmc Owned by: mmu_man
Priority: normal Milestone: R1
Component: System/POSIX Version: R1/alpha3
Keywords: open_memstream Cc:
Blocked By: Blocking:
Platform: All

Description

It's currently defining buf as void:

extern FILE     *open_memstream(void **buf, size_t *size);

Open Group shows it as char: http://pubs.opengroup.org/onlinepubs/9699919799/functions/open_memstream.html

This was detected while trying to build leptonica.

Change History (2)

comment:1 by scottmc, 14 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev42618.

comment:2 by mmu_man, 14 years ago

Thanks!

Note: See TracTickets for help on using tickets.