Fixed open_memstream(), buf was void, opengroup.org shows that it should be char.  Fixes #7905.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42618 a95241bf-73f2-0310-859d-f6bbb57e9c96