headers/posix/stdio.h
@@ -97,7 +97,7 @@ extern void		perror(const char *errorPrefix);
 
 /* memory streams */
 extern FILE		*fmemopen(void *buf, size_t size, const char *mode);
-extern FILE		*open_memstream(void **buf, size_t *size);
+extern FILE		*open_memstream(char **buf, size_t *size);
 
 /* file I/O */
 extern int		fflush(FILE *stream);
